MovieNight/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: movienight
  labels:
    app: movienight
    environment: production
